--- a/views/users.ejs
+++ b/views/users.ejs
@@ -2,7 +2,7 @@
 
 <head>
   <!-- 부트스트랩 -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+  <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">-->
   <!-- UI 전용 css-->
   <link rel='stylesheet' href='/stylesheets/default.css' />
 </head>
