--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
 <html>
 
 <head>
-  <title>
-    <%= title %>
-  </title>
   <!--Jquery-->
   <link rel="stylesheet" href="//code.jquery.com/ui/1.8.18/themes/base/jquery-ui.css" />
   <script src="//ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
@@ -12,6 +8,24 @@
   <!-- 부트스트랩 -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+
+  <script>
+    $(function () {
+      $("#birth").datepicker({
+        dateFormat: 'yy-mm-dd',
+        prevText: '이전 달',
+        nextText: '다음 달',
+        monthNames: ['1월', '2월', '3월', '4월', '5월', '6월', '7월', '8월', '9월', '10월', '11월', '12월'],
+        monthNamesShort: ['1월', '2월', '3월', '4월', '5월', '6월', '7월', '8월', '9월', '10월', '11월', '12월'],
+        dayNames: ['일', '월', '화', '수', '목', '금', '토'],
+        dayNamesShort: ['일', '월', '화', '수', '목', '금', '토'],
+        dayNamesMin: ['일', '월', '화', '수', '목', '금', '토'],
+        showMonthAfterYear: true,
+        yearSuffix: '년',
+      });
+    });
+  </script>
 </head>
 <nav class="navbar navbar-default">
   <div class="container-fluid">
@@ -42,13 +56,25 @@
   </div>
 </nav>
 
-<body>
-  <h1>
-    <%= title %>
-  </h1>
-  <p>Welcome to
-    <%= title %>
-  </p>
+<body class="container">
+  <form action="/login" method="POST">
+    <div>
+      <section>
+        <div class="col-md-6">
+          <div class=>
+            <div class>
+              <h3>회원가입</h3>
+              <div>
+                <div class="form-group"><label for="id">회원 아이디 : </label><input type="text" class="form-control" name="id" required></div>
+                <div class="form-group"><label for="pass">비밀번호 : </label><input type="password" class="form-control" name="password" required></div>
+                <div class="form-group"><button class="btn btn-block btn-primary" onclick="submit()">로그인하기</button></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
+  </form>
 </body>
 
 </html>
