--- a/views/users.ejs
+++ b/views/users.ejs
@@ -1,26 +1,48 @@
 <html>
 
 <head>
+  <!--Jquery-->
+  <link rel="stylesheet" href="//code.jquery.com/ui/1.8.18/themes/base/jquery-ui.css" />
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+  <script src="//code.jquery.com/ui/1.8.18/jquery-ui.min.js"></script>
+  <script src="http://code.jquery.com/jquery-migrate-1.2.1.js"></script>
   <!-- 부트스트랩 -->
-  <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">-->
-  <!-- UI 전용 css-->
-  <link rel='stylesheet' href='/stylesheets/default.css' />
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  
+  
+  <script>
+    $(function() {
+        $("#birth").datepicker({
+        dateFormat: 'yy-mm-dd',
+        prevText: '이전 달',
+        nextText: '다음 달',
+        monthNames: ['1월', '2월', '3월', '4월', '5월', '6월', '7월', '8월', '9월', '10월', '11월', '12월'],
+        monthNamesShort: ['1월', '2월', '3월', '4월', '5월', '6월', '7월', '8월', '9월', '10월', '11월', '12월'],
+        dayNames: ['일', '월', '화', '수', '목', '금', '토'],
+        dayNamesShort: ['일', '월', '화', '수', '목', '금', '토'],
+        dayNamesMin: ['일', '월', '화', '수', '목', '금', '토'],
+        showMonthAfterYear: true,
+        yearSuffix: '년',
+        });
+    });
+  </script>
 </head>
 
-<body class="skin-blue fixed">
+<body class="container">
   <form action="/users" method="POST">
-    <div class="wrapper">
-      <section class="content">
+    <div>
+      <section>
         <div class="col-md-6">
-          <div class="box box-primary">
-            <div class="box-header">
-              <h3 class="box-title">회원가입</h3>
-              <div class="box-body">
+          <div class=>
+            <div class>
+              <h3>회원가입</h3>
+              <div>
               <div class="form-group"><label for="id">회원 아이디 : </label><input type="text" class="form-control" name="id" required></div>
               <div class="form-group"><label for="pass">비밀번호 : </label><input type="password" class="form-control" name="password" required></div>
               <div class="form-group"><label for="name">회원명 : </label><input type="text" class="form-control" name="name" required></div>
               <div class="form-group"><label for="name">연락처</label> : </label><input type="text" class="form-control" name="tel" required></div>
-              <div class="form-group"><label for="name">생년월일</label> : </label><input type="text" class="form-control" name="birth" id="birth" required></div>
+              <div class="form-group"><label for="name">생년월일</label> : </label><input type="text" class="form-control" name="birth" id="birth" required readonly></div>
               <div class="form-group"><button class="btn btn-block btn-primary" onclick="submit()">회원가입하기</button></div>
               </div>
             </div>
