--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,9 +30,9 @@
             <li><a href="/">홈</a></li>
             <% if(!user_id){ %>
               <li><a href="/users">회원가입</a></li>
-              <li><a href="/login">로그인</a></li>
+              <li><a data-toggle="modal" data-target="#exampleModal">로그인</a></li>
               <% }else{ %>
-                <li><a href="/users">회원정보수정</a></li>
+                <li><a href="/users/<%=user_code%>">회원정보수정</a></li>
                 <li><a href="/logout">로그아웃</a></li>
                 <% } %>
           </ul>
@@ -50,5 +50,32 @@
     <%= title %>
   </p>
 </body>
+
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="exampleModalLabel">로그인</h4>
+      </div>
+      <div class="modal-body">
+        <form name="form_login" action="/login" method="POST">
+          <div class="form-group">
+            <label for="recipient-name" class="control-label">회원 아이디 : </label>
+            <input type="text" class="form-control input-sm" name="id" id="recipient-name" placeholder="Enter ID" required>
+          </div>
+          <div class="form-group">
+            <label for="message-text" class="control-label">회원 비밀번호 : </label>
+            <input type="password" class="form-control input-sm" name="password" id="password" placeholder="Enter password" required>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button class="btn btn-primary" onclick="form_login.submit()">Login</button>
+      </div>
+    </div>
+  </div>
+</div>
 
 </html>
