--- a/views/users.ejs
+++ b/views/users.ejs
@@ -1,6 +1,10 @@
+<!DOCTYPE html>
 <html>
 
 <head>
+  <title>
+    <%= title %>
+  </title>
   <!--Jquery-->
   <link rel="stylesheet" href="//code.jquery.com/ui/1.8.18/themes/base/jquery-ui.css" />
   <script src="//ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
@@ -9,8 +13,6 @@
   <!-- 부트스트랩 -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  
-  
   <script>
     $(function() {
         $("#birth").datepicker({
@@ -28,7 +30,6 @@
     });
   </script>
 </head>
-
 <body class="container">
   <form action="/users" method="POST">
     <div>
@@ -38,11 +39,11 @@
             <div class>
               <h3>회원가입</h3>
               <div>
-              <div class="form-group"><label for="id">회원 아이디 : </label><input type="text" class="form-control" name="id" required></div>
+              <div class="form-group"><label for="id">회원 아이디 : </label><input type="text" class="form-control" name="id" value="<%=id%>" required></div>
               <div class="form-group"><label for="pass">비밀번호 : </label><input type="password" class="form-control" name="password" required></div>
-              <div class="form-group"><label for="name">회원명 : </label><input type="text" class="form-control" name="name" required></div>
-              <div class="form-group"><label for="name">연락처</label> : </label><input type="text" class="form-control" name="tel" required></div>
-              <div class="form-group"><label for="name">생년월일</label> : </label><input type="text" class="form-control" name="birth" id="birth" required readonly></div>
+              <div class="form-group"><label for="name">회원명 : </label><input type="text" class="form-control" name="name" value="<%=name%>" required></div>
+              <div class="form-group"><label for="name">연락처 : </label><input type="text" class="form-control" name="tel" value="<%=tel%>" required></div>
+              <div class="form-group"><label for="name">생년월일 : </label><input type="text" class="form-control" name="birth" id="birth" value="<%=birthday%>" required readonly></div>
               <div class="form-group"><button class="btn btn-block btn-primary" onclick="submit()">회원가입하기</button></div>
               </div>
             </div>
