--- a/views/users.ejs
+++ b/views/users.ejs
@@ -31,7 +31,7 @@
   </script>
 </head>
 <body class="container">
-  <form action="/users" method="POST">
+  <form name="form_register" action="/users" method="POST">
     <div>
       <section>
         <div class="col-md-6">
@@ -44,7 +44,11 @@
               <div class="form-group"><label for="name">회원명 : </label><input type="text" class="form-control" name="name" value="<%=name%>" required></div>
               <div class="form-group"><label for="name">연락처 : </label><input type="text" class="form-control" name="tel" value="<%=tel%>" required></div>
               <div class="form-group"><label for="name">생년월일 : </label><input type="text" class="form-control" name="birth" id="birth" value="<%=birthday%>" required readonly></div>
+              <% if(!id){%>
               <div class="form-group"><button class="btn btn-block btn-primary" onclick="submit()">회원가입하기</button></div>
+              <% }else{ %>
+              <div class="form-group"><button class="btn btn-block btn-primary" onclick="submit()">회원정보수정</button></div>
+              <% } %>
               </div>
             </div>
           </div>
