--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,48 +1,5 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-  <title>
-    <%= title %>
-  </title>
-  <!--Jquery-->
-  <link rel="stylesheet" href="//code.jquery.com/ui/1.8.18/themes/base/jquery-ui.css" />
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
-  <script src="//code.jquery.com/ui/1.8.18/jquery-ui.min.js"></script>
-  <!-- 부트스트랩 -->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-</head>
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav navbar-right">
-        <div class="dropdown">
-          <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">
-          <% if(!user_id){ %>
-          Dropdown Example
-          <% }else{ %>
-          <%=user_id%>
-          님, 안녕하세요
-          <% } %>
-        <span class="caret"></span></button>
-          <ul class="dropdown-menu">
-            <li><a href="/">홈</a></li>
-            <% if(!user_id){ %>
-              <li><a href="/users">회원가입</a></li>
-              <li><a data-toggle="modal" data-target="#exampleModal">로그인</a></li>
-              <% }else{ %>
-                <li><a href="/users/<%=user_code%>">회원정보수정</a></li>
-                <li><a href="/logout">로그아웃</a></li>
-                <% } %>
-          </ul>
-        </div>
-      </ul>
-    </div>
-  </div>
-</nav>
-
-<body>
+<% layout('layout') -%>
+<body class="container">
   <h1>
     <%= title %>
   </h1>
@@ -50,32 +7,3 @@
     <%= title %>
   </p>
 </body>
-
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="exampleModalLabel">로그인</h4>
-      </div>
-      <div class="modal-body">
-        <form name="form_login" action="/login" method="POST">
-          <div class="form-group">
-            <label for="recipient-name" class="control-label">회원 아이디 : </label>
-            <input type="text" class="form-control input-sm" name="id" id="recipient-name" placeholder="Enter ID" required>
-          </div>
-          <div class="form-group">
-            <label for="message-text" class="control-label">회원 비밀번호 : </label>
-            <input type="password" class="form-control input-sm" name="password" id="password" placeholder="Enter password" required>
-          </div>
-        </form>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button class="btn btn-primary" onclick="form_login.submit()">Login</button>
-      </div>
-    </div>
-  </div>
-</div>
-
-</html>
