--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -20,20 +20,20 @@
             <ul class="nav navbar-nav navbar-right">
                 <div class="dropdown">
                     <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">
-          <% if(!user_id){ %>
+          <% if(!session.user_id){ %>
           Dropdown Example
           <% }else{ %>
-          <%=user_id%>
+          <%=session.user_id%>
           님, 안녕하세요
           <% } %>
         <span class="caret"></span></button>
                     <ul class="dropdown-menu">
                         <li><a href="/">홈</a></li>
-                        <% if(!user_id){ %>
+                        <% if(!session.user_id){ %>
                             <li><a href="/users">회원가입</a></li>
                             <li><a data-toggle="modal" data-target="#exampleModal">로그인</a></li>
                             <% }else{ %>
-                                <li><a href="/users/<%=user_code%>">회원정보수정</a></li>
+                                <li><a href="/users/<%=session.user_code%>">회원정보수정</a></li>
                                 <li><a href="/logout">로그아웃</a></li>
                                 <% } %>
                     </ul>
