--- a/views/users_modify.ejs
+++ b/views/users_modify.ejs
@@ -16,7 +16,7 @@
     });
   </script>
 <body class="container">
-  <form name="form_register" action="/users" method="POST">
+  <form name="form_register" action="/users/<%=code%>" method="POST">
     <div>
       <section>
         <div class="col-md-6">
@@ -24,12 +24,12 @@
             <div class>
               <h3>회원가입</h3>
               <div>
-              <div class="form-group"><label for="id">회원 아이디 : </label><input type="text" class="form-control" name="id" required></div>
+              <div class="form-group"><label for="id">회원 아이디 : </label><input type="text" class="form-control" name="id" value="<%=id%>" required></div>
               <div class="form-group"><label for="pass">비밀번호 : </label><input type="password" class="form-control" name="password" required></div>
-              <div class="form-group"><label for="name">회원명 : </label><input type="text" class="form-control" name="name" required></div>
-              <div class="form-group"><label for="name">연락처 : </label><input type="text" class="form-control" name="tel" required></div>
-              <div class="form-group"><label for="name">생년월일 : </label><input type="text" class="form-control" name="birth" id="birth" required readonly></div>
-              <div class="form-group"><button class="btn btn-block btn-primary" onclick="submit()">회원가입하기</button></div>
+              <div class="form-group"><label for="name">회원명 : </label><input type="text" class="form-control" name="name" value="<%=name%>" required></div>
+              <div class="form-group"><label for="name">연락처 : </label><input type="text" class="form-control" name="tel" value="<%=tel%>" required></div>
+              <div class="form-group"><label for="name">생년월일 : </label><input type="text" class="form-control" name="birth" id="birth" value="<%=birthday%>" required readonly></div>
+              <div class="form-group"><button class="btn btn-block btn-primary" onclick="submit()">회원정보수정</button></div>
               </div>
             </div>
           </div>
