--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -21,7 +21,7 @@
                 <div class="dropdown">
                     <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">
           <% if(!session.user_id){ %>
-          Dropdown Example
+          MENU
           <% }else{ %>
           <%=session.user_id%>
           님, 안녕하세요
