--- a/views/attendance.ejs
+++ b/views/attendance.ejs
@@ -1,6 +1,6 @@
 <% layout('layout') -%>
 <body class="container">
-  <form name="form_register" action="/users" method="POST">
+  <form name="form_register" action="/attendance" method="POST">
     <div>
       <section>
         <div class="col-md-6">
