--- a/views/users.ejs
+++ b/views/users.ejs
@@ -12,6 +12,9 @@
         dayNamesMin: ['일', '월', '화', '수', '목', '금', '토'],
         showMonthAfterYear: true,
         yearSuffix: '년',
+        changeMonth: true,
+        changeYear: true,
+        yearRange: 'c-100:c',
         });
     });
   </script>
